--- a/aboutUs.html
+++ b/aboutUs.html
@@ -212,7 +212,7 @@ text-align: center;
               <input type="checkbox" id="showDrop">
               <label for="showDrop" class="mobile-item">Online Shopping</label>
               <ul class="drop-menu">
-                <li><a href="#">Bottle</a></li>
+                <li><a href="#">Bottler</a></li>
                 <li><a href="#">Equipment</a></li>
                 <li><a href="#">Training Shoes</a></li>
                 <li><a href="#">Protein Powder</a></li>
