--- a/giayShop.html
+++ b/giayShop.html
@@ -96,7 +96,7 @@
                 </td>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/giay1.webp" alt=""></a>
+                        <a href="giay1.html"><img src="imgs/giay1.webp" alt=""></a>
                         <figcaption>
                             <p class="nameGiay">Nike Metcon 8 MF</p>
                             <p class="tien">$154.11</p>
@@ -108,7 +108,7 @@
                 </td>
                 <td>
                     <figure>
-                        <a href=""><img src="doAn/giay2.webp" alt=""></a>
+                        <a href=""><img src="imgs/giay2.webp" alt=""></a>
                         <figcaption>
                             <p class="nameGiay">Nike Metcon 8</p>
                             <p class="tien">$154.11</p>
