--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="aboutUs.html">About Us</a></li>
             <li><a href="#">Blogs</a></li>
             <li>
-              <a href="#" class="desktop-item">Online Shopping</a>
+              <a href="shop.html" class="desktop-item">Online Shopping</a>
               <input type="checkbox" id="showDrop">
               <label for="showDrop" class="mobile-item">Online Shopping</label>
               <ul class="drop-menu">
