--- a/shop.html
+++ b/shop.html
@@ -24,10 +24,10 @@
           <ul class="nav-links">
             <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
             <li><a href="index.html">Home</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="aboutUs.html">About Us</a></li>
             <li><a href="#">Blogs</a></li>
             <li>
-              <a href="#" class="desktop-item">Online Shopping</a>
+              <a href="shop.html" class="desktop-item">Online Shopping</a>
               <input type="checkbox" id="showDrop">
               <label for="showDrop" class="mobile-item">Online Shopping</label>
               <ul class="drop-menu">
