--- a/blog.html
+++ b/blog.html
@@ -149,12 +149,16 @@
             margin-inline-start: 0px;
             margin-inline-end: 0px;
             font-weight: bold;
+            padding-left: 20px;
+            padding-right: 7px;
         }
         h5{
             font-family: 'Courier New', Courier, monospace;
             font-weight: inherit;
             font-size: small;
             color: darkslategrey;
+            padding-left: 20px;
+            padding-right: 7px;
         }
         .breadcrumb-text .breadcrumb-option a {
             font-size: 16px;
@@ -167,6 +171,7 @@
             color: #007bff;
             text-decoration: none;
             background-color: transparent;
+            
         }
         /* .fa {
             display: inline-block;
@@ -219,8 +224,8 @@
             box-sizing: border-box;
         }
         .img_blog{
-            width: 250px;
-            height: 250px;
+            width: 330px;
+            height: 300px;
             padding: 30px;
             text-align: center;
         }
