--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                 <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="#">Blogs</a></li>
+                <li><a href="blog.html">Blogs</a></li>
                 <li>
                     <a href="shop.html" class="desktop-item">Online Shopping</a>
                     <input type="checkbox" id="showDrop">
