--- a/singleproduct.html
+++ b/singleproduct.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../assets/css/product-detail.css" type="text/css">
     <script src="angular.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="css/app.css">
    <style>
     #cart:hover {
   border-color: #fff;
