--- a/shop.html
+++ b/shop.html
@@ -12,8 +12,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="shop.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/shop.css">
 </head>
 <body>
     <nav>
@@ -25,7 +25,7 @@
             <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutUs.html">About Us</a></li>
-            <li><a href="#">Blogs</a></li>
+            <li><a href="blog.html">Blogs</a></li>
             <li>
               <a href="shop.html" class="desktop-item">Online Shopping</a>
               <input type="checkbox" id="showDrop">
