--- a/singleproduct.html
+++ b/singleproduct.html
@@ -260,7 +260,7 @@ close_footer.onclick = function () {
   modal.style.display = "none";
 }
 order.onclick = function () {
-  alert("Cảm ơn bạn đã thanh toán đơn hàng")
+  alert("Thank you for your order payment!")
 }
 window.onclick = function (event) {
   if (event.target == modal) {
