--- a/about.html
+++ b/about.html
@@ -1,31 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
-    <link rel="stylesheet" type="text/css" href="css/contact.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css.css" />
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <style>
-        .content{
-            max-width: 1300px;
-            margin:auto;
-            padding: 10% ;
-            position:relative;
-        }
-        table{
-            display: block;
-            border-style: none;
-        }
-    </style>
 </head>
-
 <body>
     <nav>
         <div class="wrapper">
@@ -64,54 +49,9 @@
             <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
         </div>
     </nav>
-    <div class="content">
-        <table style="text-align: center;">
-            <tr>
-                <td><h1 style="font-size: 6.5rem; font-family: Arial, Helvetica, sans-serif; font-weight: bolder; letter-spacing: 5px;">Contact Us</h1></td>
-            </tr>
-            <tr>
-            <td>
-                <section id="contact">
-                    <!--socail----------->
-                    <div class="social">
-                        <!--icons--------->
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="mailto:primefitness@gmail.com"><i class="fa fa-envelope"></i></a>
-                        <a href="tel://1234567920"><i class="fa fa-phone"></i></a>
-                    </div>
-                    <!--contact-box------------->
-                    <div class="contact-box">
-                        <!--heading---------->
-                        <div class="c-heading">
-                            <h1>Get In Touch</h1>
-                            <p>Let us know what you have in your mind about us</p>
-                        </div>
-                        <!--inputs------------------>
-                        <div class="c-inputs">
-                            <form>
-                                <input type="text" placeholder="Full Name" />
-                                <input type="email" placeholder="Example@gmail.com" />
-                                <textarea name="message" placeholder="Write Message"></textarea>
-                                <!--sumbit-btn----------->
-                                <button>SEND</button>
-                            </form>
-                        </div>
-
-                    </div>
-                    <!--map------------------->
-                    <div class="map">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1634.813929409879!2d77.69771061037777!3d12.954916049116575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae13a47cd0a5c3%3A0x6e8909db0ccf9319!2sPRIME%20FITNESS%20CLUB(The%20Largest%20GYM%20In%20Marathahalli)!5e0!3m2!1sen!2s!4v1670756016929!5m2!1sen!2s"
-                            width="700" height="550" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                </section>
-            </td>
-        </tr>
-    </table>
-    </div>
+    <section>
+        
+    </section>
     <footer class="footer">
         <div class="container">
             <div class="row">
@@ -159,5 +99,4 @@
         <p class="copy">&copy; Prime Fitness Club Ltd. All rights reserved.</p>
     </footer>
 </body>
-
 </html>
