--- a/blog.html
+++ b/blog.html
@@ -241,43 +241,41 @@
 <body>
     <nav>
         <div class="wrapper">
-          <div class="logo"><a href="#"><img src="imgs/logo.png" class="log"></a></div>
-          <input type="radio" name="slider" id="menu-btn">
-          <input type="radio" name="slider" id="close-btn">
-          <ul class="nav-links">
-            <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="aboutUs.html">About Us</a></li>
-            <li><a href="blog.html">Blogs</a></li>
-            <li>
-              <a href="shop.html" class="desktop-item">Online Shopping</a>
-              <input type="checkbox" id="showDrop">
-              <label for="showDrop" class="mobile-item">Online Shopping</label>
-              <ul class="drop-menu">
-                <li><a href="#">Bottles</a></li>
-                <li><a href="#">Equipment</a></li>
-                <li><a href="#">Training Shoes</a></li>
-                <li><a href="#">Protein Powder</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#" class="desktop-item">Services</a>
-              <input type="checkbox" id="showDrop">
-              <label for="showDrop" class="mobile-item">Services</label>
-              <ul class="drop-menu">
-                <li><a href="#">HIIT</a></li>
-                <li><a href="#">Cycling</a></li>
-                <li><a href="#">Kickboxing</a></li>
-                <li><a href="#">Yoga</a></li>
-                <li><a href="#">Personal Training</a></li>
-              </ul>
-            </li>
-            <li><a href="contactUs.html">Contact Us</a></li>
-            <li><a href="#"><i class="glyphicon glyphicon-user"></i>Log in</a></li>
-          </ul>
-          <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
+            <div class="logo"><a href="#"><img src="imgs/logo.png" class="log"></a></div>
+            <input type="radio" name="slider" id="menu-btn">
+            <input type="radio" name="slider" id="close-btn">
+            <ul class="nav-links">
+                <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="blog.html">Blogs</a></li>
+                <li>
+                    <a href="shop.html" class="desktop-item">Online Shopping</a>
+                    <input type="checkbox" id="showDrop">
+                    <label for="showDrop" class="mobile-item">Online Shopping</label>
+                    <ul class="drop-menu">
+                        <li><a href="shop.html#bottle">Bottles</a></li>
+                        <li><a href="shop.html#shoes">Training Shoes</a></li>
+                        <li><a href="shop.html#powder">Protein Powder</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="service.html" class="desktop-item">Services</a>
+                    <input type="checkbox" id="showDrop">
+                    <label for="showDrop" class="mobile-item">Services</label>
+                    <ul class="drop-menu">
+                        <li><a href="aerobics.html">Aerobics</a></li>
+                        <li><a href="boxing.html">Boxing</a></li>
+                        <li><a href="yoga.html">Yoga</a></li>
+                        
+                    </ul>
+                </li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="login.html"><i class="glyphicon glyphicon-user"></i>Log in</a></li>
+            </ul>
+            <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
         </div>
-      </nav><br><br>
+    </nav>
     <section class="breadcrumb-section set-bg" data-setbg="imgs/blog.webp" style="background-image:url(imgs/blog.webp);">
         <div class="container_blog">
             <div class="row">
@@ -388,53 +386,49 @@
     </section>
     <footer class="footer">
         <div class="container">
-          <div class="row">
-            <div class="footer-col">
-              <h4>About us</h4>
-              <ul>
-                <li><a href="#">Facilities</a></li>
-                <li><a href="#">Our Services</a></li>
-                <li><a href="#">Blogs</a></li>
-              </ul>
+            <div class="row">
+                <div class="footer-col">
+                    <h4>About us</h4>
+                    <ul>
+                        <li><a href="service.html">Our Services</a></li>
+                        <li><a href="blog.html">Blogs</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Online Shop</h4>
+                    <ul>
+                        <li><a href="shop.html#bottle">Bottles</a></li>
+                        <li><a href="shop.html#shoes">Training Shoes</a></li>
+                        <li><a href="shop.html#powder">Protein Powder</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Services</h4>
+                    <ul>
+                        <li><a href="aerobics.html">Aerobics</a></li>
+                        <li><a href="boxing.html">Boxing</a></li>
+                        <li><a href="yoga.html">Yoga</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Contact us</h4>
+                    <ul class="contact">
+                        <li><span class="glyphicon glyphicon-earphone"></span> 123-456-7890</li>
+                        <li><span class="glyphicon glyphicon-home"></span> 862/B,VTR PLAZA,2nd floor,4th main road,
+                            Tulsi Theater Rd, Marathahalli, Bengaluru,
+                            Karnataka 560037, India</li>
+                        <li></li>
+                    </ul>
+                    <div class="social-links">
+                        <a href="cart.html"><i class="fab fa-facebook-f"></i></a>
+                        <a href="cart.html"><i class="fab fa-twitter"></i></a>
+                        <a href="cart.html"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
             </div>
-            <div class="footer-col">
-              <h4>Online shop</h4>
-              <ul>
-                <li><a href="#">Bottles</a></li>
-                <li><a href="#">Equipment</a></li>
-                <li><a href="#">Training Shoes</a></li>
-                <li><a href="#">Protein Powder</a></li>
-              </ul>
-            </div>
-            <div class="footer-col">
-              <h4>Services</h4>
-              <ul>
-                <li><a href="#">HIIT</a></li>
-                <li><a href="#">Kickboxing</a></li>
-                <li><a href="#">Cycling</a></li>
-                <li><a href="#">Yoga</a></li>
-                <li><a href="#">Personal Training</a></li>
-              </ul>
-            </div>
-            <div class="footer-col">
-              <h4>Contact us</h4>3
-              <ul class="contact">
-                <li><span class="glyphicon glyphicon-earphone"></span>  123-456-7890</li>
-                <li><span class="glyphicon glyphicon-home"></span>  862/B,VTR PLAZA,2nd floor,4th main road, 
-                  Tulsi Theater Rd, Marathahalli, Bengaluru,
-                  Karnataka 560037, India</li>
-                <li></li>
-              </ul>
-              <div class="social-links">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-              </div>
-            </div>
-          </div>
         </div>
         <hr>
         <p class="copy">&copy; Prime Fitness Club Ltd. All rights reserved.</p>
-     </footer>
+    </footer>
 </body>
 </html>
