--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script> 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/shop.css">
+    <style>
+      @media screen and (max-width: 970px){
+      .para{
+        width: 550px;
+        overflow:visible;
+      }
+}
+    </style>
 </head>
 <body>
   <nav>
@@ -65,16 +73,14 @@
      </section>
      <div class="table-response">
         <h1>Best Trainer</h1>
-        <table class="trainer">
-          <tr>
-            <td><img src="doAn/yoga.jpg" class="imgs" class="hlv" width="550px"></td>
-            <td class="para">
-              <h1 style="text-align: left;">Yoga by Sophie</h1><br>
-              <p>Sophie, a Yoga teacher teaches with heart, enthusiasm and continuous learning, certified as an international yoga teacher by the Asean yoga association. Teachers teach online with thousands of students. Besides, she is also an inspiration to help people practice yoga for a better life. Currently on Sophie's youtube channel there are more than 191,000 subscribers and on the fanpage there are more than 28,000 followers. With these 2 main information pages, people can easily register to try this sport.</p><br>
+        <div class="trainer">
+          <img src="doAn/yoga.jpg" class="imgs" class="hlv" width="550px" style="float: left;">
+          <div class="para">
+            <h1>Yoga by Sophie</h1>
+            <p>Sophie, a Yoga teacher teaches with heart, enthusiasm and continuous learning, certified as an international yoga teacher by the Asean yoga association. Teachers teach online with thousands of students. Besides, she is also an inspiration to help people practice yoga for a better life. Currently on Sophie's youtube channel there are more than 191,000 subscribers and on the fanpage there are more than 28,000 followers. With these 2 main information pages, people can easily register to try this sport.</p><br>
               <button style="font-size: 15px;"><a href="#">More Trainers</a></button>
-            </td>
-          </tr>
-        </table>
+          </div>
+        </div>
       </div>
       <h1 class="title-shop" id="powder">BEST SELLER</h1>
       <main class="main bd-grid">
