--- a/shop.html
+++ b/shop.html
@@ -94,7 +94,7 @@
           <main class="main bd-grid">
               <article class="card">
                   <div class="card__img">
-                      <img src="imgs/bottle1.png" class="img">
+                    <a href="product/bottle1.html"><img src="imgs/bottle1.png" class="img"></a>
                   </div>
                   <div class="card__name">
                       <p>PRECISION TRAINING WATER BOTTLE</p>
@@ -112,7 +112,7 @@
   
               <article class="card">
                   <div class="card__img">
-                      <img src="imgs/bottle2.png" class="img">
+                    <a href="product/bottle2.html"><img src="imgs/bottle2.png" class="img"></a>
                   </div>
                   <div class="card__name">
                       <p>PRECISION HYGIENE WATER BOTTLE</p>
@@ -129,7 +129,7 @@
   
               <article class="card">
                   <div class="card__img">
-                      <img src="imgs/bottle3.png" class="img">
+                    <a href="product/bottle3.html"><img src="imgs/bottle3.png" class="img"></a>
                   </div>
                   <div class="card__name">
                       <p>PUMA TRAINING WATER BOTTLE IN GREEN</p>
@@ -146,7 +146,7 @@
                 </article>
               <article class="card">
                   <div class="card__img">
-                      <img src="imgs/bottle4.png" class="img">
+                    <a href="product/bottle4.html"><img src="imgs/bottle4.png" class="img"></a>
                   </div>
                   <div class="card__name">
                       <p>PUMA UNISEX TRAINING WATER BOTTLE</p>
@@ -163,7 +163,7 @@
               </article>
               <article class="card">
                 <div class="card__img">
-                    <img src="imgs/bottle5.png" class="img">
+                    <a href="product/bottle5.html"><img src="imgs/bottle5.png" class="img">
                 </div>
                 <div class="card__name">
                     <p>TRIMEX BIO WATER BOTTLE</p>
@@ -180,7 +180,7 @@
             </article>
             <article class="card">
                 <div class="card__img">
-                    <img src="imgs/bottle6.png" class="img">
+                    <a href="product/bottle6.html"><img src="imgs/bottle6.png" class="img"></a>
                 </div>
                 <div class="card__name">
                     <p>NIKE T1 TRAINING SWOOSH WATER BOTTLE</p>
@@ -200,7 +200,7 @@
           <main class="main bd-grid">
               <article class="card">
                   <div class="card__img">
-                      <img src="imgs/shoe1.png" class="img">
+                      <a href="product/shoe1.html"><img src="imgs/shoe1.png" class="img"></a>
                   </div>
                   <div class="card__name">
                       <p>NIKE AIR MAX APLHA TRAINER 5</p>
@@ -218,7 +218,7 @@
   
               <article class="card">
                   <div class="card__img">
-                      <img src="imgs/shoe2.png" class="img">
+                    <a href="product/shoe2.html"><img src="imgs/shoe2.png" class="img"></a>
                   </div>
                   <div class="card__name">
                       <p>NIKE METCON 8 AMP</p>
@@ -235,7 +235,7 @@
   
               <article class="card">
                   <div class="card__img">
-                      <img src="imgs/shoe3.png" class="img">
+                    <a href="product/shoe3.html"><img src="imgs/shoe3.png" class="img"></a>
                   </div>
                   <div class="card__name">
                       <p>NIKE MC TRAINER</p>
@@ -253,7 +253,7 @@
   
               <article class="card">
                   <div class="card__img">
-                      <img src="imgs/shoe4.png" class="img">
+                    <a href="product/shoe4.html"><img src="imgs/shoe4.png" class="img"></a>
                   </div>
                   <div class="card__name">
                       <p>NIKE AIR ZOOM SUPERREP 3</p>
@@ -270,7 +270,7 @@
               </article>
               <article class="card">
                 <div class="card__img">
-                    <img src="imgs/shoe5.png" class="img">
+                    <a href="product/shoe5.html"><img src="imgs/shoe5.png" class="img"></a>
                 </div>
                 <div class="card__name">
                     <p>NIKE AIR MAX APLHA TRAINER 4</p>
@@ -287,7 +287,7 @@
             </article>
             <article class="card">
                 <div class="card__img">
-                    <img src="imgs/shoe6.png" class="img">
+                    <a href="product/shoe6.html"><img src="imgs/shoe6.png" class="img"></a>
                 </div>
                 <div class="card__name">
                     <p>NIKE SUPERREP GO 3 NEX NATURE FLYKIT</p>
@@ -307,7 +307,7 @@
           <main class="main bd-grid">
               <article class="card">
                   <div class="card__img">
-                      <img src="imgs/whey1.png" class="img">
+                    <a href="product/whey1.html"><img src="imgs/whey1.png" class="img"></a>
                   </div>
                   <div class="card__name">
                       <p>BPN VEGAN PROTEIN POWDER</p>
@@ -325,7 +325,7 @@
   
               <article class="card">
                   <div class="card__img">
-                      <img src="imgs/whey2.png" class="img">
+                    <a href="product/whey2.html"><img src="imgs/whey2.png" class="img"></a>
                   </div>
                   <div class="card__name">
                       <p>MUSCLE MILK PRO SERIRES 50 INTENSE VANILLA POTEIN POWDER</p>
@@ -342,7 +342,7 @@
   
               <article class="card">
                   <div class="card__img">
-                      <img src="imgs/whey3.png" class="img">
+                    <a href="product/whey3.html"><img src="imgs/whey3.png" class="img"></a>
                   </div>
                   <div class="card__name">
                       <p>DMOOSE WHEY PROTEIN POWDER</p>
