--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/about.css" />
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -48,9 +49,87 @@
             </ul>
             <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
         </div>
-    </nav>
+    </nav><br><br>
     <section>
-        
+        <div>
+            <img src="imgs/about-us.jpg" width="100%">
+        </div>
+        <div class="outer-box">
+            <div class="box">
+                <h1>Who are we</h1>
+                <p>
+                    Prime Fitness is fitness club established in the year 1982. 
+                    The fitness club has equipped with all basic fitness equipment and also included the newly introduced. The Prime fitness club is the flagship brand for Prime Fitness Club Ltd, a UN based health and fitness services provider and a pioneer in the “Integrated Health Club Management Solutions
+                     business. 
+                     Prime Fitness Club ltd focuses on staying fit is most important to meet the challenging requirements.
+                </p>
+            </div>
+            <div class="box">
+                <h1>Our Mission</h1>
+                <p>To enhance the quality of life in the communities, we serve through our fitness philosophy, facilities, programs, and products and to instill in the lives of people everywhere the value of health and fitness.</p>
+            </div>
+        </div>
+        <div class="box">
+            <h1>Our Trainers</h1>
+                </div>
+    </div>
+        <div class="main">
+            <div class="profile-card">
+                <div class="img">
+                    <img src="imgs/anh1.jpg">
+                  </div>
+                  <div class="caption">
+                    <h3>Nguyen Tran Duy Nhat</h3>
+                    <p>Muaythai Trainer</p>
+                  </div>
+            </div>
+            <div class="profile-card">
+                <div class="img">
+                    <img src="imgs/anh2.jpg">
+                  </div>
+                  <div class="caption">
+                    <h3>Thibaut</h3>
+                    <p>Gym Trainer</p>
+                  </div>
+            </div>
+            <div class="profile-card">
+                <div class="img">
+                    <img src="imgs/anh3.jpg">
+                  </div>
+                  <div class="caption">
+                    <h3>Huu Ba</h3>
+                    <p>Gym Trainer</p>
+                  </div>
+            </div>
+            <div class="profile-card">
+                <div class="img">
+                    <img src="imgs/anh4.jpg">
+                  </div>
+                  <div class="caption">
+                    <h3>Jordan Yeoh</h3>
+                    <p>Gym Trainer</p>
+                  </div>
+            </div>
+            <div class="profile-card">
+                <div class="img">
+                    <img src="imgs/anh5.jpg">
+                  </div>
+                  <div class="caption">
+                    <h3>Liin Nguyen</h3>
+                    <p>Yoga Trainer</p>
+                  </div>
+            </div>
+            <div class="profile-card">
+                <div class="img">
+                    <img src="imgs/anh6.jpg">
+                  </div>
+                  <div class="caption">
+                    <h3>HANA Giang Anh</h3>
+                    <p>Aerobics Trainer</p>
+                  </div>
+                </div>
+           </div>
+       
     </section>
     <footer class="footer">
         <div class="container">
