--- a/aboutUs.html
+++ b/aboutUs.html
@@ -204,9 +204,9 @@ text-align: center;
           <input type="radio" name="slider" id="close-btn">
           <ul class="nav-links">
             <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Blogs</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="aboutUs.html">About Us</a></li>
+            <li><a href="blog.html">Blogs</a></li>
             <li>
               <a href="#" class="desktop-item">Online Shopping</a>
               <input type="checkbox" id="showDrop">
