--- a/product/whey1.html
+++ b/product/whey1.html
@@ -838,7 +838,7 @@ font-size: 25px;
                                 </div>
                                 
                                 <div class="tab-pane active" id="pic-3">
-                                    <img src="imgs/whey1.png" style="width:300px;height:200px">
+                                    <img src="../imgs/whey1.png" style="width:300px;height:200px">
                                 </div>
                             </div>
                             <ul class="preview-thumbnail nav nav-tabs">
