--- a/product/whey1.html
+++ b/product/whey1.html
@@ -781,44 +781,43 @@ font-size: 25px;
 
 <body>
 
-<nav>
+  <nav>
     <div class="wrapper">
-<div class="logo"><a href="#">Prime Fitness</a></div>
-      <input type="radio" name="slider" id="menu-btn">
-      <input type="radio" name="slider" id="close-btn">
-      <ul class="nav-links">
-        <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
-        <li><a href="#">Home</a></li>
-<li><a href="#">About Us</a></li>
-        <li>
-          <a href="#" class="desktop-item">Online Shopping</a>
-          <input type="checkbox" id="showDrop">
-          <label for="showDrop" class="mobile-item">Online Shopping</label>
-          <ul class="drop-menu">
-            <li><a href="#">Bottle</a></li>
-            <li><a href="#">Equipment</a></li>
-            <li><a href="#">Training Shoes</a></li>
-            <li><a href="#">Protein Powder</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="#" class="desktop-item">Services</a>
-          <input type="checkbox" id="showDrop">
-          <label for="showDrop" class="mobile-item">Services</label>
-          <ul class="drop-menu">
-            <li><a href="#">HIIT</a></li>
-            <li><a href="#">Cycling</a></li>
-            <li><a href="#">Kickboxing</a></li>
-            <li><a href="#">Yoga</a></li>
-            <li><a href="#">Personal Training</a></li>
-          </ul>
-        </li>
-        <li><a href="#">Feedback</a></li>
-        <li><a href="#"><i class="glyphicon glyphicon-user"></i>  Log in</a></li>
-      </ul>
-      <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
+        <div class="logo"><a href="#"><img src="imgs/logo.png" class="log"></a></div>
+        <input type="radio" name="slider" id="menu-btn">
+        <input type="radio" name="slider" id="close-btn">
+        <ul class="nav-links">
+            <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="blog.html">Blogs</a></li>
+            <li>
+                <a href="shop.html" class="desktop-item">Online Shopping</a>
+                <input type="checkbox" id="showDrop">
+                <label for="showDrop" class="mobile-item">Online Shopping</label>
+                <ul class="drop-menu">
+                    <li><a href="shop.html#bottle">Bottles</a></li>
+                    <li><a href="shop.html#shoes">Training Shoes</a></li>
+                    <li><a href="shop.html#powder">Protein Powder</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="service.html" class="desktop-item">Services</a>
+                <input type="checkbox" id="showDrop">
+                <label for="showDrop" class="mobile-item">Services</label>
+                <ul class="drop-menu">
+                    <li><a href="aerobics.html">Aerobics</a></li>
+                    <li><a href="boxing.html">Boxing</a></li>
+                    <li><a href="yoga.html">Yoga</a></li>
+                    
+                </ul>
+            </li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="login.html"><i class="glyphicon glyphicon-user"></i>Log in</a></li>
+        </ul>
+        <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
     </div>
-  </nav>
+</nav>
 
 
         <div class="card">
