--- a/product/whey3.html
+++ b/product/whey3.html
@@ -689,7 +689,7 @@ nav{
 <body>
   <nav>
     <div class="wrapper">
-        <div class="logo"><a href="#"><img src="../imgs/logo.png" class="log"></a></div>
+        <div class="logo"><a href="#"><img src="imgs/logo.png" class="log"></a></div>
         <input type="radio" name="slider" id="menu-btn">
         <input type="radio" name="slider" id="close-btn">
         <ul class="nav-links">
@@ -723,7 +723,7 @@ nav{
         </ul>
         <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
     </div>
-</nav><br><br>
+</nav>
 
         <div class="card">
             <div class="container-fliud">
