--- a/aerobics.html
+++ b/aerobics.html
@@ -111,7 +111,7 @@
         <div class="card-column column-0">
           <div class="card card-color-0">
             <div class="border" ></div>
-            <img src="imgs/imgs/loi-ich-cua-Aerobic1.jpeg" />
+            <img src="imgs/loi-ich-cua-Aerobic1.jpeg" />
             <h1>HIGHLIGHTS OF NOW AEROBIC</h1>
           </div>
           <div class="card card-color-2">
@@ -185,7 +185,7 @@
       justify-content: center;"> 
       <figure class="snip0019">
        
-        <img src="imgs/https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample11.jpg" alt="sample11"/>
+        <img src="imgs/0103.jpeg" alt="sample11"/>
         <figcaption>
           <div><h2>Better self-awareness</h2></div>
           <div><p>Dancing can benefit people of all ages. Many forms, such as dance, may be appropriate for people with limited mobility or health problems....</p></div>
@@ -193,7 +193,7 @@
         </figcaption>     
       </figure>
       <figure class="snip0019">
-        <img src="imgs/https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample12.jpg" alt="sample12"/>
+        <img src="imgs/0203.jpeg" alt="sample12"/>
         <figcaption>
           <div><h2>Improve memory</h2></div>
           <div><p>During the learning process, you have to remember the dance moves, so the neurons of the brain will connect better to improve memory.</p></div>
@@ -201,7 +201,7 @@
         </figcaption>     
       </figure>
       <figure class="snip0019">
-        <img src="imgs/https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample13.jpg" alt="sample13"/>
+        <img src="imgs/0303.jpeg" alt="sample13"/>
         <figcaption>
           <div><h2>Helps improve skin</h2></div>
           <div><p>Dancing improves your skin dramatically. When dancing, your body will produce collagen to help smooth skin and elastin to improve thickness and firmness.</p></div>
@@ -634,7 +634,7 @@ function resize() {
   windowHeight = window.innerHeight;
 }
 
-var paragraphText = '<p>Burn from 800 - 1200kcal with choreography with distinct nuances such as Immerse yourself in the vibrant Latin & Salsa dance inspired by the endless festive atmosphere, you will have to conquer the moves, fast movements. The rotation movement continuously affects the whole body. Or a subject that combines free and simple dance moves on many genres of music from Latin, Jazz to Hiphop will gradually arouse the passion for music hidden deep inside you. and if you are too bored with the usual choreography, the aerial choreography (pole dance) will not let you down or kpop is a great choice, you just need to listen to the music, feel free to adventure in your own way. own. Burn your heart out in the music space with members with the same passion, along with a constantly updated playlist that will surely give you endless inspiration. With a sequence of movements that require you to train your memory ability, thereby helping you increase focus and remember longer!!!</p>';
+var paragraphText = '<p>Burn from 800 - 1200kcal with choreography with distinct nuances such as Immerse yourself in the vibrant Latin & Salsa dance inspired by the endless festive atmosphere, you will have to conquer the moves, fast movements. The rotation movement continuously affects the whole body. Or a subject that combines simple dance steps on many genres of music from Latin, Jazz will gradually arouse your passion for practice. and if you are too bored with the usual choreography, dynamic choreography will not disappoint you, you just need to listen to the music, feel free to follow along. Burn your heart out in the music space with members who share the same passion, along with a constantly updated playlist that will surely give you endless inspiration. With a series of movements that require you to train your memory ability, thereby helping you to increase your concentration and remember longer!!!</p>';
       </script>
       /*02*/
       <footer class="footer">
